# granular_gpu

./: .gitignore  CMakeLists.txt  build.yaml  frame_times.txt  frame_times_adaptive.txt  piling_normal.txt  stats.csv  stats.txt
.cache/clangd/index/: CUDAFunctions.cuh.804641A629EF646F.idx  DArray.hpp.CD5EAECE71131312.idx  Global.hpp.BC3F11319E5385CE.idx  GranularParticles.hpp.06669E0988891970.idx  GranularSystem.cu.CB39DCBA48E9ECE4.idx  GranularSystem.hpp.31E0E02B61547229.idx  ParticleData.hpp.7138A2C270D26956.idx  Particles.cpp.6E5F31766F85C503.idx  Particles.cu.95D3A69C98218DC6.idx  Particles.hpp.24FF74AC3D1BFF2D.idx  ShaderUtility.cpp.4FDCAC6B1E7BE7A1.idx  ShaderUtility.hpp.DC0BBC13FCAB3164.idx  Solver.cu.2AE6FF57EBF4F48E.idx  Solver.hpp.2C8E49BFED892F28.idx  System.cu.C760D120B17BFDD8.idx  System.hpp.E15259982D2C9281.idx  VBO.hpp.3C768F408C00AC9B.idx  helper_math.h.196ECB50CCB86B99.idx  main.cu.BA5C5D3307B50917.idx  ~main.cu.D6A6A4870E1D2B1F.idx
.zed/: tasks.json
scenes/: box.json  box_opening.json  box_opening_no.json  box_opening_up.json  corner.json  excavator.json  funnel.json  piling.json
src/: CUDAFunctions.cuh  DArray.hpp  Global.hpp  GranularParticles.hpp  GranularSystem.cu  GranularSystem.hpp  ParticleData.hpp  Particles.cu  Particles.hpp  SceneConfig.hpp  ShaderUtility.cpp  ShaderUtility.hpp  Solver.cu  Solver.hpp  System.cu  System.hpp  VBO.hpp  main.cu
src/shaders/: particles.frag  particles.vert
